--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "dev:rag": "cd Rag_agent && python main.py",
     "build": "vite build",
     "build:dev": "vite build --mode development",
+    "build:rag": "cd Rag_agent && pip install -r requirements.txt",
+    "start:rag": "cd Rag_agent && python -m uvicorn main:app --host 0.0.0.0 --port $PORT",
     "lint": "eslint .",
     "preview": "vite preview"
   },
