--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"vite\" \"cd Rag_agent && python main.py\"",
     "dev:backend": "python app/application.py",
     "dev:full": "concurrently \"npm run dev\" \"npm run dev:backend\"",
     "dev:frontend": "vite",
